# metal_ml

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
compare/: README.md  cnn_pytorch.py  input_diff.py  parity_check.py  unet_pytorch.py
example/: CMakeLists.txt
example/cnn_classification/: CMakeLists.txt  main.cpp
example/common/: CMakeLists.txt  dataset_path.h.in  mnist.h
example/mlp_classification/: CMakeLists.txt  main.cpp
example/segmentation/: CMakeLists.txt  convert_to_safetensors.py  main.cpp  safetensors.h  seg_paths.h.in  unet.h
lib/compute_graph/: CMakeLists.txt  autograd.h  cg.cpp  cg.h  nn.h  printer.h
lib/compute_graph/backends/cpu/: CMakeLists.txt  cpu.cpp  cpu.h
lib/compute_graph/backends/metal/: CMakeLists.txt  metal_executor.cpp  metal_executor.h  shader_path.h.in
lib/compute_graph/backends/metal/shaders/: kernels.metal
tests/: test_framework.h
tests/unit_tests/: CMakeLists.txt  main.cpp
